# battles2cheat

./: CMakeLists.txt  README.md
shared/: CMakeLists.txt  auth.cpp  auth.h  config.cpp  config.h  dialogs.cpp  dialogs.h  exception.cpp  exception.h  files.cpp  files.h  logger.cpp  logger.h  memory.cpp  memory.h  shared_thread.cpp  shared_thread.h  strconvert.cpp  strconvert.h  web.cpp  web.h
shared/benc/: CMakeLists.txt  benc.cpp  benc.h
shared/utils/: CMakeLists.txt  account_manager.cpp  account_manager.h  dgdata.cpp  dgdata.h  registry.cpp  registry.h  steam.cpp  steam.h
soup/: README.md
soup/include/: Assets.h  BanCodes.h  CBattles2Game.h  CCurlRequestManager.h  CGameScreen.h  CLobbyScreen.h  CLoc.h  CNetworkMessage.h  Game.h  NKModule.h  NetworkEvent.h  Scene.h  Scheduling.h  Simulation.h  balances.h  base_pointers.h  base_screen.h  ecs.h  enc_val.h  game_hud.h  game_instance.h  internal.h  maths.h  network_queue.h  nuv.h  player.h  profile.h  redshift.h  reflang.h  transaction.h
src/: CMakeLists.txt  cheat_menu.cpp  cheat_menu.h  decryptor.cpp  decryptor.h  inject_playground.cpp  inject_playground.h  js_console.cpp  js_console.h  js_wrapper.cpp  js_wrapper.h  main.cpp  player_info.cpp  player_info.h  redshift_display.cpp  redshift_display.h  win_bot.cpp  win_bot.h
src/bfbproxy/: CMakeLists.txt  proxy.cpp  proxy.h
src/hooks/: CMakeLists.txt  hook.cpp  hook.h  hook_manager.cpp  hook_manager.h
src/hooks/NKModuleStorage/: CMakeLists.txt  SendTransactionsHook.cpp  SendTransactionsHook.h
src/hooks/NetworkEvent/: CMakeLists.txt  SNetRequestQueueBloonSetEventHook.cpp  SNetRequestQueueBloonSetEventHook.h
src/hooks/balances_hook/: CMakeLists.txt  balances_hook.cpp  balances_hook.h
src/hooks/encrypt/: CMakeLists.txt  setfloathook.cpp  setfloathook.h
src/hooks/event/: AddEventFieldHook.cpp  AddEventFieldHook.h  CMakeLists.txt  LogHeroChangeHook.cpp  LogHeroChangeHook.h  LogTowerChangeHook.cpp  LogTowerChangeHook.h  LogTowerEventHook.cpp  LogTowerEventHook.h  logevent.cpp  logevent.h
src/hooks/game_instance/: CMakeLists.txt  ginsthook.cpp  ginsthook.h
src/hooks/gamehud/: CMakeLists.txt  hud_destruct.cpp  hud_destruct.h  hudhook.cpp  hudhook.h
src/hooks/gamescreen/: CMakeLists.txt  gscreen_load.cpp  gscreen_load.h
src/hooks/lobbyscreen/: CMakeLists.txt  lscreen_load.cpp  lscreen_load.h
src/hooks/module_user/: CMakeLists.txt  send_request_hook.cpp  send_request_hook.h
src/hooks/network_queue/: CMakeLists.txt  get_response_hook.cpp  get_response_hook.h  send_event_hook.cpp  send_event_hook.h  send_request_hook.cpp  send_request_hook.h
src/hooks/opengl/: CMakeLists.txt  glhook.cpp  glhook.h
src/hooks/packet/: CMakeLists.txt  DeserializeNetworkMessageHook.cpp  DeserializeNetworkMessageHook.h  SerializeNetworkMessageHook.cpp  SerializeNetworkMessageHook.h
src/hooks/redshift/: CMakeLists.txt  formdatahook.cpp  formdatahook.h  redshift_hook.cpp  redshift_hook.h
src/hooks/steamapi/: CMakeLists.txt  gethsteamuser_hook.cpp  gethsteamuser_hook.h  getuseridhook.cpp  getuseridhook.h
src/hooks/unlocks/: CMakeLists.txt  istowerunlockedhook.cpp  istowerunlockedhook.h  isupgradeunlockedhook.cpp  isupgradeunlockedhook.h
src/hooks/user_instance/: CMakeLists.txt  getdeviceidhook.cpp  getdeviceidhook.h  getuseridhook.cpp  getuseridhook.h  userhook.cpp  userhook.h
src/network/: CMakeLists.txt  packet_viewer.cpp  packet_viewer.h  request_viewer.cpp  request_viewer.h  transaction_viewer.cpp  transaction_viewer.h
src/render/: CMakeLists.txt  render_mgr.cpp  render_mgr.h  renderable.h
src/seshgen/: CMakeLists.txt  gen.js  session_generator.cpp  session_generator.h
